# NovaDocs

./: .gitignore  package-lock.json  package.json
apps/backend/src/core/: config.py
novadocs/: .env.example  .gitignore  Makefile  README.md  check-services.sh  docker-compose-minio.yml  docker-compose-postgres.yml  docker-compose-redis.yml  mock-backend.js  package-lock.json  package.json
novadocs/apps/backend/: alembic.ini  novadocs_demo-page-123.html  pyproject.toml  setup_database.py  setup_minio.py  simple-minio-setup.py  tailwind.config.js
novadocs/apps/backend/alembic/: env.py
novadocs/apps/backend/alembic/versions/: 001_initial_schema.py  002_add_storage_key.py
novadocs/apps/backend/scripts/: seed_data.py  validate_env.py
novadocs/apps/backend/src/: __init__.py  main.py
novadocs/apps/backend/src/api/: __init__.py
novadocs/apps/backend/src/api/graphql/: __init__.py  inputs.py  schema.py  types.py
novadocs/apps/backend/src/api/rest/: __init__.py  routes.py
novadocs/apps/backend/src/api/v1/: comments.py  favorites.py  pages.py  workspaces.py
novadocs/apps/backend/src/api/websocket/: __init__.py  collaboration.py
novadocs/apps/backend/src/core/: __init__.py  config.py  database.py  exceptions.py  middleware.py  models.py  redis.py
novadocs/apps/backend/src/core/auth/: __init__.py  dependencies.py  oauth.py
novadocs/apps/backend/src/core/services/: __init__.py  block.py  comment.py  database.py  favorite.py  notion.py  page.py  permission.py  search.py  storage.py  workspace.py
novadocs/apps/backend/src/migrations/: 001_initial_schema.py  __init__.py  env.py  script.py.mako
novadocs/apps/backend/src/services/: collaboration.py
novadocs/apps/frontend/: eslint.config.js  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
novadocs/apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
novadocs/apps/frontend/src/app/editor/: page.tsx
novadocs/apps/frontend/src/app/search/: page.tsx
novadocs/apps/frontend/src/app/stats/: page.tsx
novadocs/apps/frontend/src/app/test/: page.tsx
novadocs/apps/frontend/src/app/users/: page.tsx
novadocs/apps/frontend/src/components/editor/: BasicEditorToolbar.tsx  CollaborationCursors.tsx  CollaborativeEditor.tsx  DocumentActions.tsx  EditorBubbleMenu.tsx  EditorToolbar.tsx  KeyboardShortcuts.tsx  LinkEditorBubble.tsx  SimpleBubbleMenu.tsx  SlashCommandHint.tsx
novadocs/apps/frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
novadocs/apps/frontend/src/core/: config.py
novadocs/apps/frontend/src/hooks/: useAuth.ts  useDatabase.ts  useFolders.ts  usePage.ts  useWebSocket.ts
novadocs/apps/frontend/src/lib/: graphql.ts  query-client.ts  utils.ts
novadocs/apps/frontend/src/styles/: globals.css
novadocs/apps/frontend/src/types/: index.ts
novadocs/docs/: architecture.md
novadocs/infrastructure/docker/development/: docker-compose.yml  init.sql
(+16 files in other folders)
